; ModuleID = '/home/carl/AnghaBench/freebsd/sys/net80211/extr_ieee80211_freebsd.c_ieee80211_com_vdecref.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/net80211/extr_ieee80211_freebsd.c_ieee80211_com_vdecref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee80211vap = type { i32 }

@IEEE80211_COM_REF_ADD = common dso_local global i32 0, align 4
@IEEE80211_COM_REF = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [32 x i8] c"com reference counter underflow\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ieee80211_com_vdecref(%struct.ieee80211vap* %0) #0 {
  %2 = alloca %struct.ieee80211vap*, align 8
  %3 = alloca i32, align 4
  store %struct.ieee80211vap* %0, %struct.ieee80211vap** %2, align 8
  %4 = load %struct.ieee80211vap*, %struct.ieee80211vap** %2, align 8
  %5 = getelementptr inbounds %struct.ieee80211vap, %struct.ieee80211vap* %4, i32 0, i32 0
  %6 = load i32, i32* @IEEE80211_COM_REF_ADD, align 4
  %7 = sub nsw i32 0, %6
  %8 = call i32 @atomic_fetchadd_32(i32* %5, i32 %7)
  store i32 %8, i32* %3, align 4
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* @IEEE80211_COM_REF, align 4
  %11 = call i64 @MS(i32 %9, i32 %10)
  %12 = icmp ne i64 %11, 0
  %13 = zext i1 %12 to i32
  %14 = call i32 @KASSERT(i32 %13, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0))
  %15 = load i32, i32* %3, align 4
  ret void
}

declare dso_local i32 @atomic_fetchadd_32(i32*, i32) #1

declare dso_local i32 @KASSERT(i32, i8*) #1

declare dso_local i64 @MS(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
